tests/health/gold/sdk/lib__drivers__sara_r4.toit.gold
<sdk>/drivers/ublox_cellular.toit:558:30: error: Super of a class must be a class
class Interface_ extends net.Interface:
                             ^~~~~~~~~
<sdk>/drivers/cellular_base.toit:89:34: warning: Class 'COPS' is deprecated
      result := session.send COPS.scan
                                 ^
<sdk>/drivers/cellular_base.toit:97:11: warning: Class 'Operator' is deprecated
          Operator o[3] --rat=rat
          ^~~~~~~~
<sdk>/drivers/cellular_base.toit:112:26: warning: Class 'COPS' is deprecated
        session.send COPS.automatic
                         ^
<sdk>/drivers/cellular_base.toit:123:34: warning: Class 'COPS' is deprecated
        res := (session.send COPS.read).last
                                 ^
<sdk>/drivers/cellular_base.toit:125:18: warning: Class 'Operator' is deprecated
          return Operator res[2]
                 ^~~~~~~~
<sdk>/drivers/cellular_base.toit:129:25: warning: Class 'COPS' is deprecated
    at_.do: it.send COPS.deregister
                        ^
<sdk>/drivers/cellular_base.toit:145:24: warning: Class 'CFUN' is deprecated
      session.send CFUN.online
                       ^
<sdk>/drivers/cellular_base.toit:152:22: warning: Class 'CFUN' is deprecated
    session.send CFUN.offline
                     ^
<sdk>/drivers/cellular_base.toit:155:32: warning: Class 'CFUN' is deprecated
    result := session.send CFUN.get
                               ^
<sdk>/drivers/cellular_base.toit:262:15: warning: Class 'COPS' is deprecated
          COPS.manual operator.op --timeout=timeout --rat=operator.rat
              ^
<sdk>/drivers/ublox_cellular.toit:540:5: error: Type mismatch. Expected 'Interface'. Got 'Interface_'
    return Interface_ this
    ^~~~~~
<sdk>/drivers/sara_r4.toit:45:22: warning: Class 'CFUN' is deprecated
    session.send CFUN.reset
                     ^
<sdk>/drivers/sara_r4.toit:31:5: warning: Class 'UBloxCellular' is deprecated
    super
    ^~~~~
<sdk>/drivers/ublox_cellular.toit:48:14: warning: Class 'SocketState_' is deprecated
  state_ ::= SocketState_
             ^~~~~~~~~~~~
<sdk>/drivers/ublox_cellular.toit:281:19: warning: Class 'UBloxConstants' is deprecated
      --constants=UBloxConstants
                  ^~~~~~~~~~~~~~
<sdk>/drivers/ublox_cellular.toit:280:5: warning: Class 'CellularBase' is deprecated
    super uart at_session
    ^~~~~
<sdk>/drivers/cellular.toit:112:12: warning: Class 'GnssLocation' is deprecated
    return GnssLocation
           ^~~~~~~~~~~~
